<resources>
    <string name="app_name">Home Makeup</string>

    //logIn Activity
    <string name="app_logo">Application Logo</string>
    <string name="log_in_user_phone_hint">Phone Number</string>
    <string name="log_in_user_password">Password</string>
    <string name="log_in_button">Log in</string>
    <string name="not_singed_up">New User?</string>
    <string name="skip_log_in_button">Skip Log in</string>


    //sign up dialog
    <string name="client_or_provider">Are you a Client or Service Provider?</string>

    //sign up *clients* and *service providers* layout
    <string name="add_user_photo">Add new user photo</string>
    <string name="click_to_add_new_photo">Add Photo</string>
    <string name="sign_up_user_name">User Name</string>
    <string name="sign_up_user_phone">Phone Number</string>
    <string name="sign_up_user_email">Email</string>
    <string name="sign_up_user_city">City</string>
    <string name="sign_up_user_location">Location</string>
    <string name="sign_up_user_password">Password</string>
    <string name="new_user_sign_up">Sign Up</string>
    <string name="title_activity_select_location">Map</string>

    //map activity
    <string name="drag_to_your_location">Drag the red marker to your location then click confirm</string>
    <string name="code">Code</string>
    <string name="user_phone">Phone Number</string>
    <string name="user_password">Password</string>


    <string name="provider">Provider</string>
    <string name="client">Client</string>

    <string name="home">Home</string>
    <string name="personal_page">Personal Page</string>
    <string name="notification">Notification</string>
    <string name="my_requests">My Requests</string>
    <string name="call_us">Call us</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="language">Language</string>
    <string name="exit">Exit</string>
    <string name="drawer_user_image_disc">user image</string>
    <string name="user_name_ex">Ahmed Shouman</string>

    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_closed">Close Navigation Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="english_lang_drw">English</string>
    <string name="arabic_lang_drw">عربي</string>
    <string name="rates_label">Rates</string>
    <string name="name_profile">Name</string>
    <string name="email_profile">Email</string>
    <string name="phone_profile">Phone Number</string>
    <string name="city_profile">City</string>
    <string name="address_profile">Address</string>
    <string name="edit_profile">Edit</string>
    <string name="confirm_edit_profile">Confirm</string>
    <string name="previous_requests_title">Previous Requests</string>
    <string name="current_requests_title">Current Requests</string>
    <string name="provider_services_list">Services</string>
    <string name="provider_map_location">Location</string>
    <string name="provider_rates">Rates</string>
    <string name="activity_notifaction_title">Notifications</string>
    <string name="activity_requests_title">My Requests</string>
    <string name="total_cost">Total Cost: </string>
    <string name="cart_is_empty">Cart is empty, No items selected !</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="select_order_date_and_time">Select date and time</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="please_selecte_date">Please Select Date!</string>
    <string name="please_selecte_time">Please Select Time!</string>
    <string name="next">Next</string>
    <string name="cart">Cart</string>
    <string name="set_date_and_time">Set date and time</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="add_something_to_make_me_happy">Add something to make me happy :)</string>
    <string name="let_s_go">Let\'s go!</string>
    <string name="didn_t_get_the_otp_resend_otp">Didn\'t get the OTP? RESEND OTP.</string>
    <string name="enter_the_6_digit_code">Enter the 6 digit Code</string>
</resources>
