<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_personal_page"
            android:icon="@drawable/ic_personal_page"
            android:title="@string/personal_page" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_my_requests"
            android:icon="@drawable/ic_my_requests"
            android:title="@string/my_requests" />
        <item
            android:id="@+id/nav_call_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/call_us" />
        <item
            android:id="@+id/nav_terms_and_conditions"
            android:icon="@drawable/ic_conditions"
            android:title="@string/terms_and_condition" />
        <item
            android:id="@+id/nav_lang"
            android:icon="@drawable/ic_language"
            android:title="@string/language"
            app:actionLayout="@layout/layout_lang_switch_button"
            />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_log_out"
            android:title="@string/exit" />

    </group>
</menu>