<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.SignUpActivity">


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/img_user_pro"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/add_user_photo"
            android:scaleType="center"
            android:src="@drawable/ic_camera"
            android:tint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_border_color="@color/colorAccent"
            app:riv_border_width="1dip"
            app:riv_corner_radius="15dip" />

        <TextView
            android:id="@+id/txt_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/click_to_add_new_photo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_user_pro"
            app:layout_constraintEnd_toEndOf="@+id/img_user_pro"
            app:layout_constraintStart_toStartOf="@+id/img_user_pro" />


        <LinearLayout
            android:id="@+id/sign_up_edit_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_user_pro"
            app:layout_constraintVertical_bias="0.0">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_rounded_corners"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:errorEnabled="false"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/edt_pro_name"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/white"
                        android:hint="@string/sign_up_user_name"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray4"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_rounded_corners"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_mail" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:errorEnabled="false"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/edt_pro_email"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/white"
                        android:hint="@string/sign_up_user_email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray4"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_rounded_corners"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_phone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />

                <TextView
                    android:id="@+id/pro_txt_code"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:hint="@string/code"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray4"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/gray4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/pro_txt_code"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edt_pro_phone"
                    android:layout_width="0dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/white"
                    android:hint="@string/user_phone"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray4"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/view2"
                    app:layout_constraintStart_toEndOf="@id/view"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/gray4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/image_phone_code"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_phone_code"
                    android:layout_width="40dp"
                    android:layout_height="37dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:onClick="@{()->showCountryListener.showDialog()}"
                    android:padding="12dp"
                    android:src="@drawable/ic_left_arrow"
                    android:tint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_rounded_corners"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_city"
                    android:tint="@color/colorPrimary" />

                <Spinner
                    android:id="@+id/spinner_pro_city"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_gravity="center_vertical"
                    android:dropDownSelector="@android:color/holo_purple"
                    android:entries="@array/cities_names_en"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_rounded_corners"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_address"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/txt_pro_location"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:ellipsize="marquee"
                    android:gravity="center_vertical"
                    android:hint="@string/sign_up_user_location"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_rounded_corners"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_password"
                    android:tint="@color/colorPrimary" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:errorEnabled="false"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">

                    <EditText
                        android:id="@+id/edt_pro_password"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/white"
                        android:hint="@string/user_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray4"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/new_user_sign_up_btn_pro"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="120dp"
            android:layout_marginRight="120dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/sign_in_button_rounded_corners"
            android:text="@string/new_user_sign_up"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_edit_fields" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>